add sme and kurikulum

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,7 +10,9 @@ a {
   color: inherit;
   text-decoration: none;
 }
-
+.MuiBox-root.css-19kzrtu {
+  padding: 0;
+}
 * {
   box-sizing: border-box;
 }
