--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,6 +13,11 @@ a {
 .MuiBox-root.css-19kzrtu {
   padding: 0;
 }
+
+.MuiAccordionSummary-expandIconWrapper.Mui-expanded {
+  transform: rotate(45deg);
+}
+
 * {
   box-sizing: border-box;
 }
