--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,6 +18,20 @@ a {
   transform: rotate(45deg);
 }
 
+.testimoni-swiper {
+  width: 100%;
+  height: 100%;
+}
+
+.text {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2; /* number of lines to show */
+  line-clamp: 2;
+  -webkit-box-orient: vertical;
+}
+
 * {
   box-sizing: border-box;
 }
